k8s/system/monitoring/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: default
      namespace: envoy-gateway-system # Имя и NS твоего Gateway
  hostnames:
    - "grafana.bug-farm.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmstack-grafana
          port: 80
